// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mockAsync should works event match snapshot 1`] = `
Array [
  Object {
    "desc": "it is a mock api",
    "name": "login api",
    "scenes": Array [
      Object {
        "desc": "login success",
        "name": "scene 1",
        "return": Object {
          "code": 0,
          "data": Object {
            "username": "admin",
          },
        },
      },
      Object {
        "desc": "login failure",
        "error": Object {
          "code": 1,
          "message": "password incorrect",
        },
        "name": "scene 2",
      },
    ],
    "target": [Function],
    "type": "Register/asyncFn",
  },
]
`;

exports[`mockAsync should works event match snapshot 2`] = `
Array [
  Object {
    "pass": [Function],
    "reject": [Function],
    "resolve": [Function],
    "rule": Object {
      "desc": "it is a mock api",
      "name": "login api",
      "scenes": Array [
        Object {
          "desc": "login success",
          "name": "scene 1",
          "return": Object {
            "code": 0,
            "data": Object {
              "username": "admin",
            },
          },
        },
        Object {
          "desc": "login failure",
          "error": Object {
            "code": 1,
            "message": "password incorrect",
          },
          "name": "scene 2",
        },
      ],
      "target": [Function],
      "type": "Register/asyncFn",
    },
    "target": [Function],
    "type": "Run/asyncFn/before",
  },
]
`;
